--- a/main.css
+++ b/main.css
@@ -1,15 +1,24 @@
 .grid {
     display: block;
     text-align: center;
-    padding-top: 25px;
+    border-radius: 10px;
+    position: relative;
 }
 
 .row {
     display: inline-grid;
 }
 .column {
-    background-color: rgb(170, 170, 170);
+    background-color: #949494;
     border: 0.1px solid rgb(0, 0, 0);
     height: 5px;
     width: 5px;
+} 
+.etch-border {
+    background-color: rgb(202, 0, 0);
+    height: 100px;
+    width: 100px;
+    position: absolute;
+    right: 110px;
+    border-radius: 10px;
 }
