--- a/main.css
+++ b/main.css
@@ -1,24 +1,11 @@
 .grid {
-    display: block;
-    text-align: center;
-    border-radius: 10px;
-    position: relative;
+    display: grid;
+    width: 700px;
+    height: 700px;
+    grid-template-columns: repeat(16, 1fr);
+    grid-template-rows: repeat(16, 1fr);
+    border: 2px solid black;
+    background-color: black;
+    grid-gap: 2px;
 }
 
-.row {
-    display: inline-grid;
-}
-.column {
-    background-color: #949494;
-    border: 0.1px solid rgb(0, 0, 0);
-    height: 5px;
-    width: 5px;
-} 
-.etch-border {
-    background-color: rgb(202, 0, 0);
-    height: 100px;
-    width: 100px;
-    position: absolute;
-    right: 110px;
-    border-radius: 10px;
-}
